# test-power-automations

./: .env.template  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: config.py  config.ts  data.py  data.ts  main.ts
src/api/v1/: automations.py  legal.py  tickets.py
src/bot/: adapter.py  cards.py  router.py
src/web/: router.py
src/web/pages/: config.html  open_ticket.html
src/web/static/: open_ticket.css
src/web/ts/: config.ts  open_ticket.ts
