[project]
name = "server-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "botbuilder-core>=4.17.1",
    "botbuilder-schema>=4.17.1",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.50.2",
]
